adding original English phrases for reference

--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -21,61 +21,63 @@
 %
 \titlecard{FSK 16}%
 %
-\whitecard{FSK 16}{50.000 Volt genau in die Nippel.}%
-\whitecard{FSK 16}{Daniel Radcliffes appetitliches Arschloch.}%
-\whitecard{FSK 16}{Der weibliche Orgasmus.}%
+\whitecard{FSK 16}{50.000 Volt direkt in die Nippel.}% before: genau - engl. "50,000 volts straight to the nipples"
+\whitecard{FSK 16}{Daniel Radcliffes appetitliches Arschloch.}% engl. "Daniel Radcliffe's delicious asshole"
+\whitecard{FSK 16}{Der weibliche Orgasmus.}% engl. "The female orgasm"
+\whitecard{FSK 16}{Die Klitoris.}% engl. "The clitoris"
+\whitecard{FSK 16}{Eier.}% engl. "Balls"
 \whitecard{FSK 16}{Eine Anmache.}%
-\whitecard{FSK 16}{Eine freche schwarze Frau.}% before: erotische
-\whitecard{FSK 16}{Ein gebleichtes Arschloch.}%
-\whitecard{FSK 16}{Ein kaputtes Kondom.}%
-\whitecard{FSK 16}{Ein Mikropenis.}%
+\whitecard{FSK 16}{Eine freche schwarze Frau.}% before: erotische - engl. "A sassy black woman"
+\whitecard{FSK 16}{Ein gebleichtes Arschloch.}% engl. "A bleached asshole"
+\whitecard{FSK 16}{Ein kaputtes Kondom.}% engl. "A defective condom"
+\whitecard{FSK 16}{Ein Mikropenis.}% engl. "a micropenis"
 \whitecard{FSK 16}{Ein natürliches Aphrodisiakum.}%
-\whitecard{FSK 16}{Erektile Dysfunktion.}%
-\whitecard{FSK 16}{Feuchte Träume.}% original: feuchter Traum
-\whitecard{FSK 16}{Fliegende Sex-Schlangen.}%
-\whitecard{FSK 16}{Heavy Petting.}% original: Third Base (https://en.wikipedia.org/wiki/Baseball_metaphors_for_sex)
-\whitecard{FSK 16}{Erotische Kissen- schlachten.}% original: sexy
+\whitecard{FSK 16}{Ein Ödipuskomplex.}% engl. "An Oedipus complex"
+\whitecard{FSK 16}{Erektile Dysfunktion.}% engl. "Erectile dysfunction"
+\whitecard{FSK 16}{Feuchte Träume.}% original: feuchter Traum - engl. "Wet dreams"
+\whitecard{FSK 16}{Fliegende Sex-Pythons.}% engl. "Flying sex snakes" -> Extra long lanky penises - before: Sex-Schlangen
+\whitecard{FSK 16}{Heavy Petting.}% engl. "Third Base" (https://en.wikipedia.org/wiki/Baseball_metaphors_for_sex) - original: Die Dritte Base
+\whitecard{FSK 16}{Erotische Kissen- schlachten.}% original: sexy - engl "Sexy pillow fights"
 \whitecard{FSK 16}{Genitalpircings.}%
-\whitecard{FSK 16}{Geschmackvolle Seitentitte.}% original: sideboob, before: Dekolleté
+\whitecard{FSK 16}{Geschmackvolle Seitentitte.}% original: sideboob, before: Dekolleté - engl. "Tasteful sideboob"
 \whitecard{FSK 16}{Harald Schmidts Hoden im Vorhang verfangen.}%
-\whitecard{FSK 16}{Hodentorsion.}%
-\whitecard{FSK 16}{Hose mit ausgespartem Hintern.}%
-\whitecard{FSK 16}{``Ihn'' rausholen.}% original: Es rausholen.
-\whitecard{FSK 16}{Klitoris.}%
-\whitecard{FSK 16}{Lance Armstrongs fehlender Hoden.}%
-\whitecard{FSK 16}{Masturbation.}%
-\whitecard{FSK 16}{Meine Vagina.}%
+\whitecard{FSK 16}{Hodentorsion.}% engl. "Tersticular torsion"
+\whitecard{FSK 16}{Arschfreie Lederhose.}% before: Burschen ohne Ärsche - engl. "Assless chaps"
+\whitecard{FSK 16}{Vorher rausziehen.}% original: Es rausholen - before: ``Ihn`` rausholen - engl. "Pulling out" -> as a contraceptive method
+\whitecard{FSK 16}{Begrapschen.}% orig: Mit einem Gefühl zurecht kommen - engl. "Copping a feel" https://www.dict.cc/?s=to+cop+a+feel
+\whitecard{FSK 16}{Lance Armstrongs fehlender Hoden.}% engl. "Lance Armstrongs missing testicle"
+\whitecard{FSK 16}{Masturbation.}% engl. "Masturbation"
+\whitecard{FSK 16}{Meine Vagina.}% engl. "My vagina"
 \whitecard{FSK 16}{Nippelpiercings.}%
-\whitecard{FSK 16}{Oma nackt sehen.}%
-\whitecard{FSK 16}{Penis-Atem.}%
-\whitecard{FSK 16}{Penis-Finger.}%
-\whitecard{FSK 16}{Sanftes Liebkosen der Oberschenkel- innenseite.}%
-\whitecard{FSK 16}{Halbherziges Vorspiel.}%
-\whitecard{FSK 16}{So sauer werden, dass man einen Ständer bekommt.}%
-\whitecard{FSK 16}{Stephen Hawking, der versaut redet.}% before: Sexgespräche
-\whitecard{FSK 16}{Ein Mann am Rande des Orgasmus.}%
+\whitecard{FSK 16}{Oma nackt sehen.}% engl. "Seing grandma naked"
+\whitecard{FSK 16}{Penis-Atem.}% engl. "Penis breath"
+\whitecard{FSK 16}{Penis-Finger.}% engl. "Dick fingers"
+\whitecard{FSK 16}{Sanftes Liebkosen der Oberschenkel- innenseite.}% engl. "A gentle caress of the inner thigh"
+\whitecard{FSK 16}{Halbherziges Vorspiel.}% engl. "Half-assed foreplay"
+\whitecard{FSK 16}{So sauer werden, dass man einen Ständer bekommt.}% engl. "Getting so angry that you pop a boner"
+\whitecard{FSK 16}{Stephen Hawking, der versaut redet.}% before: Sexgespräche - engl. "Stephen Hawking talking dirty"
+\whitecard{FSK 16}{Ein Mann am Rande des Orgasmus.}% engl. "A man on the brink of orgasm"
 \whitecard{FSK 16}{Testikuläre Verdrehung.}%
-\whitecard{FSK 16}{Überraschungs- sex!}%
-\whitecard{FSK 16}{Völlig nackt.}%
-\whitecard{FSK 16}{Vorhäute.}% original: Vorhaut
-\whitecard{FSK 16}{Erotische Harry-Potter Geschichten.}% before: Literatur
-\whitecard{FSK 16}{Laktation.}%
-\whitecard{FSK 16}{Sexuelle Spannungen.}%
-\whitecard{FSK 16}{Sich nackt ausziehen und KiKa gucken.}% original: Nickelodeon
-\whitecard{FSK 16}{Einvernehm-\newline licher Sex.}%
-\whitecard{FSK 16}{Alice Schwarzers Vagina.}%
-\whitecard{FSK 16}{Bilder von Brüsten.}% original: Titten
-\whitecard{FSK 16}{Eine Erektion, die länger als vier Stunden dauert.}%
-\whitecard{FSK 16}{Einen Ständer verstecken.}% before: Erektion
-\whitecard{FSK 16}{Eregierte Nippel.}%
-\whitecard{FSK 16}{Freunde mit gewissen Vorzügen.}%
-\whitecard{FSK 16}{Holzfäller Phantasien.}%
-\whitecard{FSK 16}{Mein Sexleben.}%
+\whitecard{FSK 16}{Überraschungs- sex!}% engl. "Surprise sex!"
+\whitecard{FSK 16}{Völlige Nacktheit.}% engl. "Full frontal nudity"
+\whitecard{FSK 16}{Vorhäute.}% original: Vorhaut - engl. "Foreskin"
+\whitecard{FSK 16}{Erotische Harry-Potter Geschichten.}% before: Literatur - engl. "Harry Potter erotica"
+\whitecard{FSK 16}{Laktation.}% engl. "Lactation"
+\whitecard{FSK 16}{Sexuelle Spannung.}% engl. "Sexual tension"
+\whitecard{FSK 16}{Sich nackt ausziehen und KiKa gucken.}% original: Nickelodeon - engl. "Getting naked and watching Nickelodeon"
+\whitecard{FSK 16}{Einvernehm-\newline licher Sex.}% engl. "Consensual sex"
+\whitecard{FSK 16}{Bilder von Brüsten.}% original: Titten - engl. "Pictures of boobs"
+\whitecard{FSK 16}{Eine Erektion, die länger als vier Stunden dauert.}% engl. "An erection that lasts longer than four hours"
+\whitecard{FSK 16}{Einen Ständer verstecken.}% before: Erektion - enl. "Concealing a boner"
+\whitecard{FSK 16}{Rasiermesser-scharfe Nippel.}% before: Eregierte Nippel - engl. "Nipple blades"
+\whitecard{FSK 16}{Freunde mit gewissen Vorzügen.}% engl. "Friends with benefits"
+\whitecard{FSK 16}{Holzfäller-Phantasien.}% engl. "Lumberjack fantasies"
+\whitecard{FSK 16}{Mein Sexleben.}% engl. "My sex life"
 \whitecard{FSK 16}{Schenkel- schnorcheln.}%
-\whitecard{FSK 16}{Panda Sex.}%
-\whitecard{FSK 16}{Eine Schnappschildkröte, die einem in die Penisspitze beißt.}%
+\whitecard{FSK 16}{Panda Sex.}% engl. "Panda sex"
+\whitecard{FSK 16}{Eine Schnappschildkröte, die einem in die Penisspitze beißt.}% engl. "A snapping turtle biting the tip of your penis"
 %
-\blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
-\blackcard{1}{FSK 16}{Ich denke während dem Sex gerne über \underl nach.}%
-\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt. Sie sagten, wir könnten nicht \underl in \underl stecken. Sie lagen falsch.}%
-\blackcard{1}{FSK 16}{Wie verlor ich meine Jungfräulichkeit?}%
+\blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex haben, nachdem sie \underl ausgesetzt waren.}% engl. "A recent laboratory shows that undergraduates have 50% less sex after being exposed to ___"
+\blackcard{1}{FSK 16}{Ich denke während dem Sex gerne an \underl.}% engl. "During sex, I like to think about ___"
+\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt. Sie sagten, wir könnten \underl nicht in \underl stecken. Sie lagen falsch.}% engl. "They said we were crazy. They said we couldn't put ___ inside of ___. They were wrong"
+\blackcard{1}{FSK 16}{Wie verlor ich meine Jungfräulichkeit?}% engl. "How did I lose my virginity?"
