--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -24,25 +24,30 @@
 \whitecard{Geschichte}{Adolf Hitler.}%
 \whitecard{Geschichte}{Anders Breivik.}%
 \whitecard{Geschichte}{Der Amoklauf von Winnenden.}%
-\whitecard{Geschichte}{Historische schwarze Kollegen.}%
+\whitecard{Geschichte}{Historisch bedingte schwarze Schulen.}% before: Historische schwarze Kollegen - engl. "Historically black colleges"
+\whitecard{Geschichte}{Der Pfad der Tränen}% before: Eine Spur aus Tränen - engl. "The Trail of Tears" https://de.wikipedia.org/wiki/Pfad_der_Tr%C3%A4nen
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
 \whitecard{Geschichte}{Genghis Khan.}%
-\whitecard{Geschichte}{Hurrikan Katrina.}%
+\whitecard{Geschichte}{Hurrikan Katrina.}% engl. "Hurricane Katrina"
 \whitecard{Geschichte}{Kim Jong-il.}%
 \whitecard{Geschichte}{Lee Harvey Oswald.}%
+\whitecard{Geschichte}{Pockenviren-verseuchte Decken.}% engl. "Smallpox blankets" -> intentional smallpox spreading in Native Americans
 \whitecard{Geschichte}{Sklaverei.}%
-\whitecard{Geschichte}{Unser erster Chimpansen-Kanzler.}%
-\whitecard{Geschichte}{Wikinger.}%
-\whitecard{Geschichte}{Ein Zeitreise-Paradoxon.}%
-\whitecard{Geschichte}{Der Urknall.}%
-\whitecard{Geschichte}{Katapulte.}%
+\whitecard{Geschichte}{Drei-Fünftel-Klausel.}% before: Halbherziger Kompromiss - engl. "Three-Fifths compromise" -> Slaves count 3/5 of a white person https://de.wikipedia.org/wiki/Drei-F%C3%BCnftel-Klausel
+\whitecard{Geschichte}{Solidaritäts-zuschlag.}% supplementary replacement for Drei-Fünftel-Klausel - engl. "Three-Fifths compromise"
+\whitecard{Geschichte}{Unser erster Chimpansen-Kanzler.}% engl. "Our first chimpanze president"
+\whitecard{Geschichte}{Wikinger.}% engl. "Vikings"
+\whitecard{Geschichte}{Ein Zeitreise-Paradoxon.}% engl "A time travel paradox"
+\whitecard{Geschichte}{Der Urknall.}% engl. "The Big Bang"
+\whitecard{Geschichte}{Katapulte.}% engl. "Catapults"
 \whitecard{Geschichte}{Marcus Iunius Brutus.}%
-\whitecard{Geschichte}{Beidseitige Bereitschaft zum nuklearen Gegenschlag.}%
-\whitecard{Geschichte}{Der Übermensch.}%
-\whitecard{Geschichte}{In Polen einmarschieren.}%
+\whitecard{Geschichte}{Beiderseitige Bereitschaft zum nuklearen Gegenschlag.}% engl. "Mutually-assured destruction"
+\whitecard{Geschichte}{Der Übermensch.}% engl. "The Übermensch"
+\whitecard{Geschichte}{In Polen einmarschieren.}% engl. "Invading Poland"
 \whitecard{Geschichte}{Gandhi.}%
 \whitecard{Geschichte}{Martin Luther King.}%
+\whitecard{Geschichte}{Fritz Haarmann.}% replacement for "John Wilkes Booth" -> Killer of Abraham Lincoln
 %
-\blackcard{1}{Geschichte}{Mit dem Ziel, mehr Besucher anzulocken, eröffnet das Naturkundemuseum eine interaktive Ausstellung über \underl.}% before: Das Naturkundemuseum stellt jetzt auch \underl aus. - original: Beim Versuch...das Smithsonian Museum of Natural History...
-\blackcard{1}{Geschichte}{``Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.``}% ref. to Albert Einstein
-\blackcard{1}{Geschichte}{Was ist in 1000 Jahren unsere Währung, wenn Papiergeld nur eine entfernte Erinnerung ist?}%
+\blackcard{1}{Geschichte}{Das Museum für Naturkunde Berlin hat gerade eine interaktive Ausstellung eröffnet über \underl.}% before: Das Naturkundemuseum stellt jetzt auch \underl aus. - original: Beim Versuch...das Smithsonian Museum of Natural History... - engl. "The Smithsonian Museum of Natural History has just opened an interactive exhibit on ___"
+\blackcard{1}{Geschichte}{``Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.``}% ref. to Albert Einstein - engl. "I do not know with what weapons World War III will be fought, but World War IV will be fought with ___"
+\blackcard{1}{Geschichte}{Wie werden wir in 1.000 Jahren unsere Güter und Dienste bezahlen, wenn Papiergeld nur eine entfernte Erinnerung ist?}% engl. "In 1,000 years, when paper money is a distant memory, how will we pay for goods and services?"
