--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -23,32 +23,34 @@
 %
 \whitecard{Kultur}{American Gladiators.}%
 \whitecard{Kultur}{Arnold Schwarzenegger.}%
+\whitecard{Kultur}{Bill Nye, ``The Science Guy``.}% before: dieser Wissenschafts-Heini - engl. "Bill Nye the Science Guy"
+\whitecard{Kultur}{Bob der Baumeister.}% replacement for Die kleine Dampflokomotive - engl. "The Little Engine That Could"
 \whitecard{Kultur}{Britney Spears mit 65.}%
-\whitecard{Kultur}{Cards against Humanity.}%
+\whitecard{Kultur}{Cards Against Humanity.}% engl. "Cards Against Humanity"
 \whitecard{Kultur}{Christopher Walken.}%
 \whitecard{Kultur}{Darth Vader.}%
-\whitecard{Kultur}{Das Anstarren eines Glückbärchis.}%
+\whitecard{Kultur}{Der Glücksbärchis-Strahl.}% engl. "The Care Bear Stare"
 \whitecard{Kultur}{Das Krümel Monster.}%
-\whitecard{Kultur}{Die Macht.}%
-\whitecard{Kultur}{Eine ``M. Night`` Shyamalan Story-Wendung.}% director of Sixth Sense, The Village, The Happening...
-\whitecard{Kultur}{Ein Live-Studio Publikum.}%
-\whitecard{Kultur}{Ein Amateurvideo von Heidi Klum, wie sie in eine Dose Ravioli heult.}%
+\whitecard{Kultur}{Die Macht.}% engl. "The Force"
+\whitecard{Kultur}{Eine ``M. Night`` Shyamalanische Story-Wendung.}% engl. "An M. Night Shyamalan plot twist" -> director of Sixth Sense, The Village, The Happening...
+\whitecard{Kultur}{Ein Live-Studio Publikum.}% engl. "A live studio audience"
+\whitecard{Kultur}{Ein Amateurvideo von Heidi Klum, wie sie in eine Dose Slim-Fast heult.}% engl "Home video of Oprah sobbing into a Lean Cuisine" - alternative: Heimvideo von Vera am Mittag beim Heulen in eine Friteuse
 \whitecard{Kultur}{Günther Jauch, der von einem Schwarm Greifvögel attackiert wird.}%
-\whitecard{Kultur}{Heimvideo von Vera am Mittag beim Heulen in eine Friteuse.}%
+\whitecard{Kultur}{Hella von Sinnens Vagina.}% replacement for engl. "Toni Morrison's Vagina"? -> awarded novelist, teacher
 \whitecard{Kultur}{Hulk Hogan.}%
 \whitecard{Kultur}{Justin Bieber.}%
 \whitecard{Kultur}{Kanye West.}%
 \whitecard{Kultur}{Keanu Reeves.}%
 \whitecard{Kultur}{Lady Gaga.}%
 \whitecard{Kultur}{Mathleten.}% iCarly reference for a Math-Club
-\whitecard{Kultur}{Michael Jackson.}%
+\whitecard{Kultur}{Michael Jackson.}% replacement for "Sean Penn" -> actor, filmmaker
 \whitecard{Kultur}{Michael ``Bully`` Herbig.}%
-\whitecard{Kultur}{Miley Cyrus mit 55.}%
-\whitecard{Kultur}{Mord im Orient-Express.}%
+\whitecard{Kultur}{Miley Cyrus mit 55.}% engl "Miley Cyrus at 55"
+\whitecard{Kultur}{Mord im Orient-Express.}% replacement for engl. "A murder most foul" -> Agatha Christy: Vier Frauen und ein Mord
 \whitecard{Kultur}{Natalie Portman.}%
 \whitecard{Kultur}{Nickelback.}%
 \whitecard{Kultur}{Nicolas Cage.}%
-\whitecard{Kultur}{Oompa-Loompas.}%
+\whitecard{Kultur}{Oompa-Loompas.}% engl. "Oompa-Loompas"
 \whitecard{Kultur}{Popper.}% -> 80`s rocker and popper?
 \whitecard{Kultur}{Pumuckl.}%
 \whitecard{Kultur}{Robert Downey, Jr.}%
@@ -57,33 +59,34 @@
 \whitecard{Kultur}{Sido.}%
 \whitecard{Kultur}{Skeletor.}%
 \whitecard{Kultur}{Star Trek.}%
-\whitecard{Kultur}{Thomas die Lokomotive.}%
+\whitecard{Kultur}{``The Chronic``.}% engl. "The chronic" -> solo debut album of Dr. Dre; named after a slang term for high-grade marijuana
+\whitecard{Kultur}{``The Hustle``.}% engl. "The Hustle" -> several references to this name in media and locations
+\whitecard{Kultur}{Thomas die Lokomotive.}% replacement for Die kleine Dampflokomotive - engl. "The Little Engine That Could"
 \whitecard{Kultur}{Vera Int-Veen}%
 \whitecard{Kultur}{William Shatner.}%
 \whitecard{Kultur}{Winnie Puh.}%
+\whitecard{Kultur}{``YOU MUST CONSTRUCT ADDITIONAL PYLONS!''}% Starcraft Meme -> translation? - engl "YOU MUST CONSTRUCT ADDITIONAL PYLONS!"
 \whitecard{Kultur}{Til Schweiger.}%
-\whitecard{Kultur}{Morgan Freemans Stimme.}%
+\whitecard{Kultur}{Morgan Freemans Stimme.}% engl. "Morgan Freeman's voice"
 \whitecard{Kultur}{Tom Cruise.}%
-\whitecard{Kultur}{Richterin Barbara Salesch.}%
+\whitecard{Kultur}{Richterin Barbara Salesch.}% engl. "Judge Judy"
 \whitecard{Kultur}{BATMAN!!!}%
-\whitecard{Kultur}{Das Flötensolo aus "My Heart Will Go On".}%
-\whitecard{Kultur}{Bastian Pastewkas Schauspiel- karriere.}% original: Shaquile O'Neal
-% replacement for "Toni Morrisons Vagina"? -> awarded novelist, teacher
-% replacement for "Sean Penn"? actor, filmmaker
+\whitecard{Kultur}{Das Blechflötensolo aus ``My Heart Will Go On``.}% engl. "The penny whistle solo from ``My Heart Will Go On``"
+\whitecard{Kultur}{Bastian Pastewkas Schauspiel- karriere.}% original: Shaquile O'Neal - engl. "Shaquille O'Neal's acting career"
 %
-\blackcard{1}{Kultur}{In ihrem neuen Disney-Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
-\blackcard{1}{Kultur}{Doch bevor ich Sie töte, Mr. Bond, muss ich Ihnen \underl zeigen.}%
-\blackcard{1}{Kultur}{Diese Saison auf dem Broadway: \underl: Das Musical.}%
-\blackcard{2}{kultur}{Wer bildet das nächste Superhelden-Gehilfen-Duo?}%
-\blackcard{1}{Kultur}{Demnächst erscheint von J.K Rowling: Harry Potter und die Kammer des \underl.}%
-\blackcard{1}{Kultur}{Und nun auf Eurosport: Das Meisterschaftsturnier im \underl.}%
-\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 C-Promis, die mit \underl zusammenleben.}% before: Stars - original: MTVs ... 8 verlebte Promis
-\blackcard{1}{Kultur}{Was hat Vin Diesel zu Mittag gegessen?}% original: zu Abend
-\blackcard{1}{Kultur}{Was ist Batmans geheimes Laster?}% before: Vorliebe
-\blackcard{2}{Kultur}{LifeTime\SymbReg präsentiert: ``\underl, die Geschichte von \underl.``}% before: Dreamworks
-\blackcard{2}{Kultur}{In ``M. Night`` Shyamalans neuem Film entdeckt Bruce Willis, dass \underl in Wirklichkeit die ganze Zeit \underl war.}% original: in Wahrheit
+\blackcard{1}{Kultur}{In ihrem neuen Disney-Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}% engl. "In the new Disney Channel Original Movie, Hannah Montana struggles with ___ for the first time"
+\blackcard{1}{Kultur}{Doch bevor ich Sie töte, Mr. Bond, muss ich Ihnen \underl zeigen.}% engl. "But before I kill you, Mr. Bond, I must show you ___"
+\blackcard{1}{Kultur}{Diese Saison auf dem Broadway: \underl: \newline Das Musical.}% engl. "Coming to Broadway this season, ___ : The Musical"
+\blackcard{2}{kultur}{Hier kommt das nächste fantastische Superhelden-Gehilfen-Duo! \newline Es sind \underl und \underl!}% engl. "Introducing the amazing superhero/ sidekick duo! It's ___ and ___!"
+\blackcard{1}{Kultur}{Demnächst erscheint von J.K Rowling: \newline Harry Potter und die Kammer des \underl.}% engl. "Next from J.K. Rowling: Harry Potter and the Chamber of ___"
+\blackcard{1}{Kultur}{Und nun auf Eurosport: Das Meisterschafts-turnier im \underl.}% engl. "Next on ESPN2, the World Series of ___"
+\blackcard{1}{Kultur}{MTVs neue Reality-TV-Show: Jetzt mit 8 abgewrackten Promis, die mit \underl zusammenleben.}% before: Stars - original: MTVs ... 8 verlebte Promis - engl. "MTV's new reality show features eight washed-up celebrities living with ___"
+\blackcard{1}{Kultur}{Was hat Vin Diesel zu Abend gegessen?}% before: zu Mittag - engl. "What did Vin Diesel eat for dinner?"
+\blackcard{1}{Kultur}{Was ist Batmans geheimes Laster?}% before: Vorliebe - engl. "What is Batman's guilty pleasure?"
+\blackcard{2}{Kultur}{LifeTime\SymbReg \newline präsentiert: \newline ``\underl, \newline die Geschichte von \underl.``}% before: Dreamworks - engl. "Lifetime presents ``___, the Story of ___``"
+\blackcard{2}{Kultur}{In ``M. Night`` Shyamalans neuem Film entdeckt Bruce Willis, dass \underl in Wirklichkeit die ganze Zeit \underl war.}% original: in Wahrheit - engl. "In M. Night Shyamalan's new movie, Bruce Willis discovers that ___ had really been ___ all along"
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
 \blackcard{1}{Kultur}{Bob Ross ist hier, um \underl.}%
-\blackcard{1}{Kultur}{``Auf diese Art geht die Welt zugrund: Auf diese Art geht die Welt zugrund: Nicht mit einem Knall: mit \underl.``}% ref. to T.S. Eliot - Die hohlen Männer - original: so wird die Welt enden... nicht mit einem Knall sondern mit...
-\blackcard{1}{Kultur}{``War, huh / What is it good for?``}% ref. to song Edwin Starr: War - before: Wofür ist Krieg gut?
+\blackcard{1}{Kultur}{``Auf diese Art geht die Welt zugrund: \newline Auf diese Art geht die Welt zugrund: \newline Nicht mit einem Knall: \newline mit \underl.``}% ref. to T.S. Eliot - Die hohlen Männer - original: so wird die Welt enden... nicht mit einem Knall sondern mit... - engl "Whis is the way the world ends \ This is the way the world ends \ Not with a bang but with ___"
+\blackcard{1}{Kultur}{``War, huh \newline What is it good for?''}% ref. to song Edwin Starr: War - before: Wofür ist Krieg gut? - engl. "War! What is it good for?"
 \blackcard{1}{Politik}{Während Picassos oftmals übersehener ``Braunen Periode`` schuf er hunderte Gemälde von \underl.}%
