--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -21,36 +21,40 @@
 %
 \titlecard{Werbung}%
 %
-\whitecard{Werbung}{5 Euro Subway Footlongs.}%
+\whitecard{Werbung}{5 Euro Subway Footlongs\SymbReg.}% engl. "Five-Dollar Footlongs"
 \whitecard{Werbung}{Activia\SymbReg.}%
 \whitecard{Werbung}{Astra.}%
 \whitecard{Werbung}{Auf Rolex umsteigen.}%
 \whitecard{Werbung}{Bifi\SymbReg.}%
+\whitecard{Werbung}{Cini-Minis\SymbReg.}% replacement for engl. "Count Chocula"
 \whitecard{Werbung}{Das Michelin-Männchen.}%
-\whitecard{Werbung}{Der Ahoi-Brause Mann.}%
-\whitecard{Werbung}{Der kalte, erfrischende Geschmack einer Pepsi\SymbReg}%
-\whitecard{Werbung}{Eine Super Soaker\SymbReg  voller Katzenpisse.}% before: Schwamm
+\whitecard{Werbung}{Der Hamburglar von McDonalds.}% engl. "The Hamburglar" -> McDonalds mascot
+\whitecard{Werbung}{Der kalte, erfrischende Geschmack einer Pepsi\SymbReg}% engl. "The cool refreshing taste of Pepsi"
+\whitecard{Werbung}{Eine Super Soaker\SymbReg  voller Katzenpisse.}% before: Schwamm - engl. "A Super Soaker full of cat pee"
 \whitecard{Werbung}{Euphoria\SymbReg  von Calvin Klein.}%
-\whitecard{Werbung}{AXE\SymbReg  Deo.}%
-\whitecard{Werbung}{Dibadibadu.}%
+\whitecard{Werbung}{AXE Body Spray\SymbReg.}% before: Deo engl. "AXE Body Spray"
+\whitecard{Werbung}{Der Fruchttieger\SymbReg.}% replacement for engl. "The Kool-Aid Man"
+\whitecard{Werbung}{Dibadibadu.}%g.}% replacement for engl. "The Kool-Aid Man"
 \whitecard{Werbung}{Happy Hippos.}% 
 \whitecard{Werbung}{McDonalds Einmaleins.}%
 \whitecard{Werbung}{Meister Proper Sauberkraft.}%
-\whitecard{Werbung}{Meister Proper, direkt hinter dir.}%
+\whitecard{Werbung}{Meister Proper, direkt hinter dir.}% engl. "Mr. Clean, right behind you"
 \whitecard{Werbung}{Ronald McDonald.}%
-\whitecard{Werbung}{Dominos\SymbReg  Oreo\SymbReg  Dessert Pizza.}%
-\whitecard{Werbung}{World of Warcraft.}%
-\whitecard{Werbung}{Viagra\SymbReg.}%
-\whitecard{Werbung}{Ein Bop It\SymbReg!}%
-\whitecard{Werbung}{Die Make-A-Wish\SymbReg  Stiftung.}%
-\whitecard{Werbung}{Whiskas.}% original: Fancy Feast
-\whitecard{Werbung}{All-you-can-eat Shrimps für 4,99 Euro.}%
-\whitecard{Werbung}{Das schwedische Tempur-Pedic\SymbReg\newline Schlafsystem.}%
+\whitecard{Werbung}{Yogurette\SymbReg.}% replacement for engl. "GoGurt" -> Go-GURT aka Yoplait Tubes aka Frubes: brand of low-fat yogurt for children
+\whitecard{Werbung}{Zur HUK Coburg\SymbReg \newline wechseln.}% replacement for engl. "Switching to Geico"
+\whitecard{Werbung}{Dominos\SymbReg \newline Oreo\SymbReg Dessert Pizza.}% engl. "Domino's Oreo Dessert Pizza"
+\whitecard{Werbung}{World of Warcraft.}% engl. "The World of Warcraft"
+\whitecard{Werbung}{Viagra\SymbReg.}% engl. "Viagra"
+\whitecard{Werbung}{Ein Bop It!\SymbReg}% engl. "A Bop It"
+\whitecard{Werbung}{Die \newline Make-A-Wish\SymbReg \newline Stiftung.}% engl. "The Make-A-Wish Foundation"
+\whitecard{Werbung}{Whiskas.}% engl. "Fancy Feast"
+\whitecard{Werbung}{All-You-Can-Eat Shrimps für \newline 4,99 Euro.}% engl. "All-you-can-eat shrimp for $4.99"
+\whitecard{Werbung}{Das Schwedische Tempur-Pedic\SymbReg\newline Schlafsystem.}% engl. "The Tempur-Pedic Swedish Sleep System"
 %
-\blackcard{1}{Werbung}{Ein romantisches Essen bei Kerzenschein wäre unvollständig ohne \underl.}%
-\blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}% original: Kohle ... bösen Kindern...
-\blackcard{1}{Werbung}{\underl: Von Kindern getestet, von Müttern empfohlen.}% original: mit Kindern getestet, von Müttern freigegeben
-\blackcard{1}{Werbung}{\underl: Gut bis zum letzten Tropfen.}%
-\blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg  Spielzeug?}%
+\blackcard{1}{Werbung}{Ein romantisches Essen bei Kerzenschein wäre unvollständig ohne \underl.}% engl. "A romantic candlelit dinner would be incomplete without ___"
+\blackcard{1}{Werbung}{\underl: \newline Von Kindern getestet, \newline von Müttern empfohlen.}% original: mit Kindern getestet, von Müttern freigegeben - engl. "___: kid-tested, mother-aproved"
+\blackcard{1}{Werbung}{\underl: \newline Gut bis zum letzten Tropfen.}% engl."___: good to the last drop"
+\blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg \newline Spielzeug?}% engl. "What the next Happy Meal toy?
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
-\blackcard{1}{Werbung}{\underl, davon kann man nicht nur einen haben!}%
+\blackcard{1}{Werbung}{\underl, \newline davon kann man nicht nur einen haben!}% engl. "___. Betcha can't have just one!"
+\blackcard{1}{Werbung}{Der neue Opel Vectra. \newline Mit der Kraft und dem Platz, um \underl überall mit hin zu nehmen.}% replacement for engl. "The new Chevy Tahoe. With the power and space to take ___ everywhere you go"
