--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -21,13 +21,12 @@
 %
 \titlecard{Drogen}%
 %
-\whitecard{Drogen}{8g bestes russisches Heroin.}% before: 8kg Heroin
-\whitecard{Drogen}{Amphetamin.}%
-\whitecard{Drogen}{Ein guter Schnupfer.}%
-\whitecard{Drogen}{Kleber schnüffeln.}%
-\whitecard{Drogen}{Mal so richtig high werden.}%
+\whitecard{Drogen}{8g bestes russisches Heroin.}% before: 8kg Heroin - replacement for engl. "8 oz. of sweet Mexican black-tar heroin"
+\whitecard{Drogen}{Ritalin.}% before: Amphetamin - replacement for engl. "Aderall" -> drug against ADHD, narcolepsy etc.
+\whitecard{Drogen}{Kleber schnüffeln.}% engl "Sniffing glue"
+\whitecard{Drogen}{Mal so richtig high werden.}% engl. "Getting really high"
 \whitecard{Drogen}{Ein Drogendeal.}%
-\whitecard{Drogen}{Crystal Meth.}%
+\whitecard{Drogen}{Crystal Meth.}% engl. "Crystal Meth"
 %
-\blackcard{1}{Drogen}{Was ist meine Anti-Droge?}%
-\blackcard{2}{Drogen}{Als ich auf einem Acid-Trip war, verwandelte sich \underl in \underl.}% original: LSD
+\blackcard{1}{Drogen}{Was ist meine Anti-Droge?}% engl. "What's my anti-drug?"
+\blackcard{2}{Drogen}{Als ich auf einem LSD-Trip war, verwandelte sich \underl in \underl.}% before: Acid - engl. "When I was tripping an ocid, ___ turned into ___"
